# aws-event

./: .gitignore  README.md  mlflow-deployment.yaml.sample  mlflow-e2e-evaluation.ipynb  pyproject.toml  requirements.txt
setup/: MLflow.md  app.py
setup/container/: Dockerfile
