[tool.poetry]
authors = ["tqtensor <victortang212@gmail.com>"]
description = "AWS Event 15 June 2024"
name = "aws-event"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aws-cdk-lib = "~2.92"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.34.121"
chromadb = "^0.5.0"
constructs = "^10.3.0"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
mlflow = {version = "~2.13", extras = ["genai"]}
python = "^3.10"
python-dotenv = "^1.0.1"
textstat = "^0.7.3"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
nbqa = {extras = ["toolchain"], version = "^1.8.5"}
toml-sort = "^0.23.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
